# JobHunting

./: .gitignore  README.md  code-template.txt
CPPUnitTest/: CMakeLists.txt
CPPUnitTest/AlgorithmTest/: DynamicProgrammingBagTest.cpp  HanioGameTest.cpp  JosephusTest.cpp  LinkGraph.hpp  LongestSubStrSeqTest.cpp  Main.cpp  MaxRectangleTest.cpp  PalinDromeTest.cpp  SPFATest.cpp  SearchString.cpp
CPPUnitTest/CPPFeatureTest/: BowlingGameTest.cpp  DynamicProgrammingBagTest.cpp  HihoCoder0807Test.cpp  HihoCoder0821Test.cpp  Hihocoder-TaigeMianjing-10.cpp  Hihocoder-TaigeMianjing-9.cpp  Hihocoder0814Test.cpp  Main.cpp  MaxRectangleMatrixTest.cpp  PromiseTest.cpp  SPFATest.cpp  TestTemplate.cpp  haniotest.cpp  input_hihocoder_taige10_PopularProduct.txt  input_spfatest.txt
CPPUnitTest/DemosTest/: CombinationTest.cpp  GraphAlgorithmTest.cpp  LeetCodeTest.cpp  LeetCodeTest2.cpp  LinkGraph.hpp  LongestSubStrSeqTest.cpp  Main.cpp  SearchString.cpp  SortTest.cpp  TempTest.cpp  TestTemplate.cpp  VirtualFuntest.cpp  offertest.cpp  singleton.hpp  singletonpatterntest.cpp
CPPUnitTest/PatternTest/: AdapterTest.cpp  BridgeTest.cpp  Observer.cpp  Proxy.cpp  Singleton.hpp  SingletonPatternTest.cpp
CPPUnitTest/PatternTest/StatePattern/: ConcreteStateA.cpp  ConcreteStateA.h  ConcreteStateB.cpp  ConcreteStateB.h  Context.cpp  Context.h  State.h  StateTest.cpp
CPPUnitTest/UtilsTest/: StringUtilsTest.cpp  TestTemplate.cpp  ThreadPoolTest.cpp
OnlineTest/403Forbidden/: 403Forbidden.sln
OnlineTest/403Forbidden-MS/: Test2.sln
OnlineTest/403Forbidden-MS/Test2/: Test2.cpp  Test2.vcxproj  Test2.vcxproj.filters
OnlineTest/403Forbidden/403Forbidden/: 403Forbidden.cpp  403Forbidden.vcxproj  403Forbidden.vcxproj.filters  403Forbidden2.cpp  403forbidden3.cpp  ReadMe.txt  my403Forbidden.cpp  stdafx.cpp
OnlineTest/CPULine/: CPULine.sln
OnlineTest/CPULine/CPULine/: CPULine.cpp  CPULine.vcxproj  CPULine.vcxproj.filters  ReadMe.txt  stdafx.cpp
OnlineTest/FontSize-MS/: Test1.sln
OnlineTest/FontSize-MS/Test1/: Test1.cpp  Test1.vcxproj
OnlineTest/HUAWEI-BeatBoss/: HUAWEI-BeatBoss.sln
OnlineTest/HUAWEI-BeatBoss/HUAWEI-BeatBoss/: HUAWEI-BeatBoss.cpp  HUAWEI-BeatBoss.vcxproj  HUAWEI-BeatBoss.vcxproj.filters  ReadMe.txt  input.txt  stdafx.cpp
OnlineTest/ImageOperation-WYGame/: Test3.sln
OnlineTest/ImageOperation-WYGame/Test3/: Test3.cpp  Test3.vcxproj  Test3.vcxproj.filters  input.txt  stdafx.cpp
OnlineTest/JINRITOUTIAO-FEMSCode/: JINRITOUTIAO-FEMSCode.sln
OnlineTest/JINRITOUTIAO-FEMSCode/JINRITOUTIAO-FEMSCode/: JINRITOUTIAO-FEMSCode.cpp  JINRITOUTIAO-FEMSCode.vcxproj  JINRITOUTIAO-FEMSCode.vcxproj.filters  ReadMe.txt  stdafx.cpp
OnlineTest/JinRiTouTiao-work1/: JinRiTouTiao-work1.sln
OnlineTest/JinRiTouTiao-work1/JinRiTouTiao-work1/: JinRiTouTiao-work1.cpp  JinRiTouTiao-work1.vcxproj  JinRiTouTiao-work1.vcxproj.filters  ReadMe.txt  input.txt  stdafx.cpp
OnlineTest/JinRiTouTiao-work2/: JinRiTouTiao-work2.sln
OnlineTest/JinRiTouTiao-work2/JinRiTouTiao-work2/: JinRiTouTiao-work2.cpp  JinRiTouTiao-work2.vcxproj  JinRiTouTiao-work2.vcxproj.filters  ReadMe.txt  input.txt  stdafx.cpp
OnlineTest/JinRiTouTiao-work3/: JinRiTouTiao-work3.sln
OnlineTest/JinRiTouTiao-work3/JinRiTouTiao-work3/: JinRiTouTiao-work3.cpp  JinRiTouTiao-work3.vcxproj  JinRiTouTiao-work3.vcxproj.filters  ReadMe.txt  input.txt  stdafx.cpp
OnlineTest/JinRiTouTiao-work4/: JinRiTouTiao-work4.sln
OnlineTest/JinRiTouTiao-work4/JinRiTouTiao-work4/: JinRiTouTiao-work4.cpp  ReadMe.txt  input.txt  (+3 more)
OnlineTest/MSDemoDay/: MSDemoDay.sln
OnlineTest/MergeSort/: MergeSort.sln
OnlineTest/OneCountLessN/: OneCountLessN.sln
OnlineTest/SQL/: SQL.sln
OnlineTest/VIrtualTest/: VIrtualTest.sln
OnlineTest/WYGame-LianLianKan/: WYGame-LianLianKan.sln
OnlineTest/WYGame-MagicalNumber/: WYGame-MagicalNumber.sln
OnlineTest/YiZhanTong-work1/: YiZhanTong-work1.sln
OnlineTest/YiZhanTong-work2/: YiZhanTong-work2.sln
documents/知识点整理/: http返回码.txt  leetcode-microsoft.txt  微软最后一题.txt  腾讯.docx  自我介绍.txt  面试自我介绍和项目部分.docx
hihocoder/BinaryWatch/: BinaryWatch.sln
hihocoder/Composition/: Composition.sln
hihocoder/ConstraintChecker/: constraint_checker.cpp  input.txt  test
hihocoder/DemoDay/: DemoDay.sln
hihocoder/FullBinaryTreePicture/: FullBinaryTreePicture.sln
hihocoder/LongestSubString/: LongestSubString.sln
hihocoder/MemoryAllocatingAlgorithm/: MemoryAllocatingAlgorithm.sln
hihocoder/RegistrationDay/: RegistrationDay.sln
hihocoder/TotalHighwayDistance-MS/: TotalHighwayDistance-MS.sln
important/DynamicProgrammingBag/: DynamicProgrammingBag.sln
important/LargestRectangleinHistogram/: LargestRectangleinHistogram.sln
iqiyi/Test1/: Test1.sln
iqiyi/Work1/: Work1.sln
iqiyi/Work2/: Work2.sln
iqiyi/Work3/: Work3.sln
linux-programmming/process-ipc/: msgtool.c  signal_test.c
linux-programmming/process-test/: daemon_init.c  data.txt  execl_test.c  fork_exec.c  fork_file_test.c  fork_test.c  gettempfilename.c  wait_test.c
microsoft/Work1/: Work1.sln
microsoft/Work2/: Work2.sln
microsoft/Work3/: Work3.sln
microsoft/Work4/: Work4.sln
normal/BrowserCaching/: BrowserCaching.sln
normal/FindContinuousSequence/: FindContinuousSequence.sln
normal/FindNumsAppearOnce/: FindNumsAppearOnce.sln
normal/FirstOnceChar/: FirstOnceChar.sln
normal/LastRemaining_Solution/: LastRemaining_Solution.sln
normal/StrToInt/: StrToInt.sln
temp/PopularProducts/: PopularProducts.sln
ubuntu_code/dynamicprogramming/: assembly.cpp  longest-common-sequence.cpp  longest-palindrome-sequence.cpp  longest-palindrome-substring.cpp  matrix-chain-order.c  matrix-chain-order2.cpp  optimal-bst.cpp
ubuntu_code/graph/: graph.cpp
ubuntu_code/greedy/: BTreeNode.h  BinaryTree.hpp  activity-select.cpp  huffman.cpp  maxHeap.cpp  maxHeap.h  minHeap.hpp  tags
ubuntu_code/leetcode/: addTwoNumber.cpp  longestPalindrome.cpp
ubuntu_code/prime/: countprimes.c
ubuntu_code/sort/: InsertionSort.java  buddle_sort.cpp  count_sort.cpp  heap.cpp  heap_sort.cpp  insertion_sort.cpp  merge_sort.cpp  quick_sort.cpp  select_sort.cpp  shell_sort.cpp
(+240 files in other folders)
